@@ -1,5 +1,14 @@
 2005-10-12  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c: (logview_save_prefs), (logview_add_log),
+	(logview_add_log_from_name), (logview_add_logs_from_names),
+	(logview_remove_log), (logview_create_window),
+	(loglist_unbold_log), (loglist_remove_selected_log),
+	(logview_version_selector_changed): Add a bunch of asserts. Don't
+	crash please.
+
+2005-10-12  Vincent Noel  <vnoel@cox.net>
+
 	* monitor.c (monitor_stop, monitor_start): Small cleanups.
 
 2005-10-12  Vincent Noel  <vnoel@cox.net>
